# Replic

./: .gitignore  .npmrc  .vercelignore  APPROVAL_FLOW_COMPLETE.md  AUTO_POST_GUIDE.md  BRAND_SCRAPER_SETUP.md  BUSINESS_NUMBER_VS_SANDBOX.md  COMPOSIO.md  COMPOSIO_QUICKSTART.md  COMPOSIO_SETUP.md  DAILY_POSTER_COMPLETE.md  DESIGN_SYSTEM.md  FINAL_SUMMARY.md  LLM_INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PROGRESS_SUMMARY.md  QUICK_START_TWILIO.md  README.md  SETUP.md  TWILIO_INTEGRATION_GUIDE.md  UPDATED_ARCHITECTURE_COMPOSIO.md  WEBHOOK_CHECKLIST.md  WEBHOOK_SETUP.md  WHATSAPP_SANDBOX_GUIDE.md  X_API_IMPLEMENTATION_PLAN.md  X_OAUTH_SERVICE_SUMMARY.md  auto-poster.py  middleware-old-backup.ts  middleware.ts  next.config.ts  package-lock.json  package.json  supabase_agent_schema.sql  supabase_rls_policies.sql  tsconfig.json  vercel.json
app/: layout.tsx  page.tsx
approval-gateway/: .gitignore  CHANGELOG.md  CHANGES_v0.2.0.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  LICENSE  MULTI_USER_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
approval-gateway/app/: __init__.py  config.py  imessage.py  main.py  models.py  rate_limit.py  redis_store.py  whatsapp.py
approval-gateway/tests/: __init__.py  test_imessage.py  test_models.py  test_rate_limit.py  test_whatsapp.py
approval-gateway/tools/: mock_core.py  seed_candidate.py  test_whatsapp.py  verify_setup.py
components/: composio-automation-demo.tsx  reddit-test-post.tsx  twitter-test-post.tsx
daily-poster/: .renderignore  CREATE_DAILY_CONTENT_TABLE.sql  (+4 more)
(+177 files in other folders)
